--- a/PASTA/css/styles.css
+++ b/PASTA/css/styles.css
@@ -258,7 +258,7 @@ h3.menu-item-title {
   text-align: center;
   background-color: #4e3e13d5;
   margin: auto;
-  width: fit-content;
+  width: 65%;
 }
 
 .about-discription {
@@ -286,10 +286,17 @@ h3.menu-item-title {
     height: 100px;
     margin: 5px 5px 5px 0;
   }
+  .about-discription , .about-title {
+    width: 70%;
+  }
 }
 
 /***** Small devices only *****/
-@media (min-width: 768px) and (max-width: 991px) {}
+@media (min-width: 768px) and (max-width: 991px) {
+  .about-discription , .about-title {
+    width: 80%;
+  }
+}
 
 /***** Extra Small devices only *****/
 @media (max-width: 767px) {
@@ -358,6 +365,9 @@ h3.menu-item-title {
     width: 360px;
     margin: 0 auto 15px;
   }
+  .about-discription , .about-title {
+    width: 90%;
+  }
 }
 
 @media (max-width: 479px) {
@@ -370,5 +380,8 @@ h3.menu-item-title {
   #specials-tile {
     width: 100%;
     margin: 0 auto 15px;
+  }
+   .about-discription , .about-title {
+    width: 100%;
   }
 }
